tests/suite/snapshots/suite__check__tests__check__bad_return_5.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_return_5.xi:7:9]
   │
 7 │         return 1
   ·         ────┬───  
   ·             ╰───── Return mismatch
───╯

